<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:alphabeticShortcut="n"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code" />
            <item
                android:id="@+id/action_import_clipboard"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_import_file"
                android:title="@string/action_import_file" />
            <item android:title="@string/add_profile_methods_manual_settings">
                <menu>
                    <item
                        android:id="@+id/action_new_config"
                        android:title="@string/custom_config" />
                </menu>
            </item>
            <item
                android:id="@+id/action_import_backup"
                android:visible="false"
                android:title="@string/backup">
                <menu>
                    <item
                        android:id="@+id/action_import_backup_clipboard"
                        android:title="@string/action_import" />
                    <item
                        android:id="@+id/action_import_backup_file"
                        android:title="@string/action_import_file" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/action_clear_traffic_statistics"
        android:title="@string/clear_traffic_statistics" />
    <item
        android:id="@+id/action_remove_duplicate"
        android:title="@string/deduplication" />
    <item
        android:id="@+id/action_connection_test"
        android:title="@string/connection_test">
        <menu>
            <item
                android:id="@+id/action_connection_url_test"
                android:title="@string/connection_test_url_test" />
            <item
                android:id="@+id/action_connection_test_clear_results"
                android:title="@string/connection_test_clear_results" />
            <item
                android:id="@+id/action_connection_test_delete_unavailable"
                android:title="@string/connection_test_delete_unavailable" />
        </menu>
    </item>
    <item
        android:id="@+id/action_update_subscription"
        android:title="@string/update_subscription" />
    <item
        android:id="@+id/action_order"
        android:title="@string/group_order">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_order_origin"
                    android:title="@string/group_order_origin" />
                <item
                    android:id="@+id/action_order_by_name"
                    android:title="@string/group_order_by_name" />
                <item
                    android:id="@+id/action_order_by_delay"
                    android:title="@string/group_order_by_delay" />
            </group>
        </menu>
    </item>

</menu>
