<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_route"
        android:icon="@drawable/ic_baseline_add_road_24"
        android:title="@string/route_add"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_disable_all"
        android:title="@string/disable_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_enable_all"
        android:title="@string/enable_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export_clipboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_route"
        android:title="@string/route_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage_assets"
        android:title="@string/route_manage_assets"
        app:showAsAction="never" />

</menu>