<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUsername"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogMessage="@string/one_per_line"
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="serverALPN"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="serverShadowQUICDisableALPN"
            app:title="Disable ALPN"
            app:useSimpleSummaryProvider="true" />
        <io.nekohasekai.sagernet.widget.SimpleMenuPreference
            app:entries="@array/shadowquic_congestion_control_value"
            app:entryValues="@array/shadowquic_congestion_control_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverCongestionController"
            app:title="@string/congestion_control"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_file_file_upload"
            app:key="serverUploadSpeed"
            app:title="Upload bandwidth (Mbps)"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/baseline_flight_takeoff_24"
            app:key="serverReduceRTT"
            app:title="@string/tuic_zero_rtt_handshake" />
        <SwitchPreference
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="serverBrookUdpOverStream"
            app:title="@string/brook_udp_over_stream"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="serverShadowQUICUseSunnyQUIC"
            app:title="SunnyQUIC"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverCertificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>