<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_action_delete"
          android:alphabeticShortcut="d"
          app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/action_apply"
          android:title="@string/apply"
          android:icon="@drawable/ic_action_done"
          android:alphabeticShortcut="s"
          app:showAsAction="always"/>
    <item android:id="@+id/action_create_shortcut"
        android:title="@string/create_shortcut"
        android:icon="@drawable/ic_action_done"
        android:alphabeticShortcut="q"
        android:visible="false"
        app:showAsAction="never"/>
</menu>
