<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="routeName"
        app:title="@string/route_name"
        app:useSimpleSummaryProvider="true" />
    <PreferenceCategory app:title="@string/cag_route">
        <EditTextPreference
            app:icon="@drawable/ic_baseline_domain_24"
            app:key="routeDomain"
            app:title="domains"
            app:dialogMessage="@string/one_per_line"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_add_road_24"
            app:key="routeIP"
            app:title="ip"
            app:dialogMessage="@string/one_per_line"
            app:useSimpleSummaryProvider="true" />
        <io.nekohasekai.sagernet.widget.ReselectableSimpleMenuPreference
            app:icon="@drawable/ic_hardware_router"
            app:entries="@array/outbound_entry"
            app:entryValues="@array/outbound_value"
            app:key="routeOutbound"
            app:title="outbound" />
    </PreferenceCategory>
</PreferenceScreen>
